# fast_zero

./: .coverage  README.md  database.db  pyproject.toml
fast_zero/: app.py  schemas.py  security.py
migrations/: README  env.py
migrations/versions/: 20b32d3ffde8_create_users_table.py  9a954617e70d_corrigindo_update_at.py  ca5821bad3c3_tirando_o_trigger_para_teste.py  d0f27ff5b760_criando_um_trigger.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
